--- a/project-scaffold-existing/template01/project.yml
+++ b/project-scaffold-existing/template01/project.yml
@@ -8,3 +8,18 @@ questions:
     question: Project description?
     type: input
     default: Please refer to https://github.com/hughjfchen/myproject01 for more info.
+
+  nixos_release:
+    question: Which nixos release?
+    type: input
+    default: "2105"
+
+  ghc_version:
+    question: Which GHC version?
+    type: input
+    default: "884"
+
+  index_state:
+    question: index-state of hackage database?
+    type: input
+    default: 2021-07-18T00:00:00Z
