--- a/project-scaffold-template/nixos2105-ghc884-indexstate20210718/project.yml
+++ b/project-scaffold-template/nixos2105-ghc884-indexstate20210718/project.yml
@@ -2,12 +2,12 @@ questions:
   name:
     question: What's the name of the project?
     type: input
-    default: myproject01
+    default: MY_PROJECT_NAME
 
   description:
     question: Project description?
     type: input
-    default: Please refer to https://github.com/hughjfchen/myproject01 for more info.
+    default: Please refer to https://github.com/hughjfchen/MY_PROJECT_NAME for more info.
 
   nixos_release:
     question: Which nixos release?
