--- a/project-scaffold-template/nixos2105-ghc884-indexstate20210718-haskell.nix/project.orig.name.cabal
+++ b/project-scaffold-template/nixos2105-ghc884-indexstate20210718-haskell.nix/project.orig.name.cabal
@@ -15,28 +15,33 @@ build-type:          Simple
 extra-doc-files:     README.md
                      CHANGELOG.md
 tested-with:         GHC == 8.8.4
+                     GHC == 8.10.7
 
 source-repository head
   type:                git
   location:            https://github.com/hughjfchen/{{name}}.git
 
 common common-options
-  build-depends:       base-noprelude ^>= 4.13.0.0
-                     , relude ^>= 0.7.0.0
-                     , text ^>= 1.2.4.0
-                     , bytestring ^>= 0.10.10.1
+  build-depends:       base >= 4.11.1.0 && < 4.15
+                     , relude
+                     , text
+                     , bytestring
                      , mtl
                      , transformers
                      , containers
                      , unordered-containers
+
+  mixins:              base hiding (Prelude)
+                     , relude (Relude as Prelude)
+                     , relude
 
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
-  if impl(ghc >= 8.0)
-    ghc-options:       -Wredundant-constraints
+                       -Wredundant-constraints
+                       -Wnoncanonical-monad-instances
   if impl(ghc >= 8.2)
     ghc-options:       -fhide-source-paths
   if impl(ghc >= 8.4)
@@ -44,6 +49,10 @@ common common-options
                        -Wpartial-fields
   if impl(ghc >= 8.8)
     ghc-options:       -Wmissing-deriving-strategies
+                       -fwrite-ide-info
+                       -hiedir=.hie
+  if impl(ghc >= 8.10)
+    ghc-options:       -Wunused-packages
 
   default-language:    Haskell2010
   default-extensions:  ConstraintKinds
@@ -72,7 +81,6 @@ library
   exposed-modules:     Core.Types
                      , Core.MyError
                      , Core.{{ name | toPascal }}
-                     , Prelude
                      , Has
                      , As
                      , Error
