refator haskell.nix template

--- a/project-scaffold-template/nixos2105-ghc8107-haskell.nix/.travis.yml
+++ b/project-scaffold-template/nixos2105-ghc8107-haskell.nix/.travis.yml
@@ -13,7 +13,7 @@ cache:
 
 matrix:
   include:
-  - ghc: 8.8.4
+  - ghc: {{ghc_version}}
   
   
 
@@ -22,6 +22,7 @@ install:
   - curl -sSL https://raw.github.com/ndmitchell/neil/master/misc/travis.sh | sh -s -- hlint .
 
   - cabal v2-update
+  - cabal v2-configure --enable-tests --enable-benchmarks --test-show-details=direct
   - cabal v2-build --enable-tests --enable-benchmarks
 
 script:
