--- a/project-scaffold-template/nixos2105-ghc8107-haskell.nix/project.orig.name.cabal
+++ b/project-scaffold-template/nixos2105-ghc8107-haskell.nix/project.orig.name.cabal
@@ -14,8 +14,7 @@ category:            Network
 build-type:          Simple
 extra-doc-files:     README.md
                      CHANGELOG.md
-tested-with:         GHC == 8.8.4
-                     GHC == 8.10.7
+tested-with:         GHC == {{ghc_version}}
 
 source-repository head
   type:                git
@@ -98,7 +97,7 @@ executable {{name}}
                      , AppError
                      , AppCapability.{{ name | toPascal }}
   build-depends:       {{name}}
-                     , optparse-applicative ^>= 0.16.1.0
+                     , optparse-applicative
   ghc-options:         -threaded
                        -rtsopts
                        -with-rtsopts=-N
