use conferer for config instead to parse cmdline.

--- a/project-scaffold-template/nixos2105-ghc8107-haskell.nix/project.orig.name.cabal
+++ b/project-scaffold-template/nixos2105-ghc8107-haskell.nix/project.orig.name.cabal
@@ -96,8 +96,15 @@ executable {{name}}
                      , AppEnv
                      , AppError
                      , AppCapability.{{ name | toPascal }}
+                     , FromConfig.PostgresqlSimple
+                     , FromConfig.ResourcePool
+                     , FromConfig.{{ name | toPascal }}
   build-depends:       {{name}}
                      , optparse-applicative
+                     , conferer
+                     , postgresql-simple
+                     , resource-pool
+                     , time
   ghc-options:         -threaded
                        -rtsopts
                        -with-rtsopts=-N
