add PatternSynonyms to default language extension.

--- a/project-scaffold-template/nixos2105-ghc8107-haskell.nix/project.orig.name.cabal
+++ b/project-scaffold-template/nixos2105-ghc8107-haskell.nix/project.orig.name.cabal
@@ -71,6 +71,7 @@ common common-options
                        TupleSections
                        TypeApplications
                        ViewPatterns
+                       PatternSynonyms
 
 library
   import:              common-options
