--- a/project-scaffold-template/nixos2111-ghc8107-haskell.nix/.github/workflows/nix-ci.yml
+++ b/project-scaffold-template/nixos2111-ghc8107-haskell.nix/.github/workflows/nix-ci.yml
@@ -4,7 +4,7 @@ name: nix-ci
 on:
   pull_request:
   push:
-    branches: [master]
+    branches: [main]
 
 jobs:
   nix-ci:
@@ -24,9 +24,9 @@ jobs:
     steps:
     - name: checkout source
       uses: actions/checkout@v2.3.3
-      if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
+      if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/main'
 
-     - name: adjust nix store path permission for restore
+    - name: adjust nix store path permission for restore
       run: |
         # Create with liberal rights, otherwise cache action will complain
         # about permission errors.
