fix hie.yaml to satisfy the HLS.

--- a/project-scaffold-template/nixos2105-ghc8104-stackage185-bazel-fully-static/hie.yaml
+++ b/project-scaffold-template/nixos2105-ghc8104-stackage185-bazel-fully-static/hie.yaml
@@ -4,10 +4,10 @@ cradle:
       component: "lib:{{name}}"
 
     - path: "./app"
-      component: "{{name}}:exe:{{name}}"
+      component: "exe:{{name}}"
 
-    - path: "./tests"
-      component: "{{name}}:test:{{name}}-tests"
+    - path: "./test"
+      component: "test:{{name}}-test"
 
     - path: "./benchmark"
-      component: "{{name}}:exe:{{name}}-benchmark"
+      component: "bench:{{name}}-benchmark"
