--- a/project-scaffold-template/full-system-nixos2111-ghc8107/frontend/package.json
+++ b/project-scaffold-template/full-system-nixos2111-ghc8107/frontend/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "java-analyzer-frontend",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@raphiniert/ra-data-postgrest": "^1.1.6",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-admin": "^3.18.1",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
+    "@raphiniert/ra-data-postgrest": "^1.1.8",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
+    "react": "^18.1.0",
+    "react-admin": "^4.1.2",
+    "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.3",
+    "react-query": "^3.39.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
